<resources>
    <string name="app_name">HAL 9000</string>
    <string name="welcome">Welcome to HAL 9000!</string>
    <string name="startButton">Continue</string>
    <string name="welcomeHint">Type your name...</string>
    <string name="home">Home</string>
    <string name="rooms">Rooms</string>
    <string name="voice">Voice</string>
    <string name="routines">Routines</string>
    <string name="devices">Devices</string>
    <string name="room_name">Room name:</string>
    <string name="link_devices">Link devices</string>
    <string name="device_type">Device type</string>
    <string name="device_name">Device name:</string>
    <string name="link_to_room">Link to room</string>

    <string-array name="heatSource">
        <item>Conventional</item>
        <item>Bottom</item>
        <item>Top</item>
    </string-array>

    <string-array name="grillMode">
        <item>Normal</item>
        <item>Eco</item>
        <item>Off</item>
    </string-array>

    <string-array name="convectionMode">
        <item>Large</item>
        <item>Eco</item>
        <item>Off</item>
    </string-array>

    <string name="done">Done!</string>
    <string name="pick_icon">Pick an icon</string>
    <string name="temperature">Temperature:</string>
    <string name="grillModeT">Grill Mode</string>
    <string name="convectionMode">Convection Mode</string>
    <string name="verticalTilt">Set vertical blades tilt:</string>
    <string name="setMode">Set mode:</string>
    <string name="fanSpeed">Set fan speed:</string>
    <string name="horizontalTilt">Set horizontal blades tilt:</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="progress">Progress</string>
    <string name="closed">Closed</string>
    <string name="locked">Locked</string>
    <string name="unlocked">Unlocked</string>
    <string name="mode">Mode:</string>
    <string name="intensity">Intensity:</string>
    <string name="exec">Execute</string>
    <string name="createnewroom">Create new room</string>
    <string name="createnewdevice">Create new device</string>
    <string name="takephoto">Take Photo</string>
    <string name="fridge">Fridge</string>
    <string name="oven">Oven</string>
    <string name="qrreader">QRReader</string>
    <string name="notif">Hello %1$s</string>
    <string name="notificationTitle">News from home!</string>
    <string name="externNotification">Device %1$s has been modified</string>
    <string name="connectionError">Connection error:</string>
    <string name="statusChanged">%1$s status has been modified</string>
    <string name="temperatureChanged">%1$s temperature has been modified</string>
    <string name="heatChanged">Air conditioner %1$s is in heat mode</string>
    <string name="grillChanged">Oven %1$s is in grill mode</string>
    <string name="convectionChanged">%1$s is now in convection mode</string>
    <string name="colorChanged">%1$s color has been redefined</string>
    <string name="brightnessChanged">%1$s brightness has been redefined</string>
    <string name="modeChanged">%1$s has changed mode</string>
    <string name="verticalSwingChanged">The vertical swing of %1$s has been modified</string>
    <string name="horizontalSwingChanged">The horizontal swing of %1$s has been modified</string>
    <string name="fanSpeedChanged">The fan speed of %1$s has been modified</string>
    <string name="lockChanged">%1$s lock has been modified</string>
    <string name="freezerTemperatureChanged">Freezer temperature of %1$s has been modified</string>
    <string name="deviceUpdated">Device updated!</string>
    <string name="beforeListen">You will see input here</string>
    <string name="listening">Listening...</string>
    <string name="microphone">You cannot be listened if you do not give us permission!</string>
    <string name="helpSound">Hold down the button to speak</string>
    <string name="fridgeTemperature">Fridge temperature:</string>
    <string name="freezerTemperature">Freezer temperature:</string>
    <string name="convMode">Convection Mode: </string>
    <string name="heatSourceT">Heat source: </string>


</resources>

