<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item-->
        <!--android:id="@+id/homeFragment"-->
        <!--android:icon="@drawable/home_icon"-->
        <!--android:title="@string/home"/>-->

    <item
        android:id="@+id/roomsFragment"
        android:icon="@drawable/rooms_icon"
        android:title="@string/rooms"
        app:labelVisibilityMode="labeled"/>

    <item
        android:id="@+id/voiceFragment"
        android:icon="@drawable/voice_icon"
        android:title="@string/voice"
        app:labelVisibilityMode="labeled"/>

    <item
        android:id="@+id/devicesFragment"
        android:icon="@drawable/devices_icon"
        android:title="@string/devices"
        app:labelVisibilityMode="labeled"/>

    <item
        android:id="@+id/routinesFragment"
        android:icon="@drawable/routines_icon"
        android:title="@string/routines"
        app:labelVisibilityMode="labeled"/>
</menu>